--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,3 +1,5 @@
 mountpoints:
- /: https://drive.google.com/drive/u/3/folders/1MAMEzcXiFZ0mJZRmtU3KqVqV0YMQcd1S
-# AEM PLA HUB https://drive.google.com/drive/u/3/folders/1Zc5G5kUrKv-G-R-SCzioAZt5ZRBTP1VP
+ 
+ #/: https://drive.google.com/drive/u/3/folders/1MAMEzcXiFZ0mJZRmtU3KqVqV0YMQcd1S
+# AEM PLA HUB
+ /: https://drive.google.com/drive/u/3/folders/1Zc5G5kUrKv-G-R-SCzioAZt5ZRBTP1VP
